<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2009 Nicholas Newberry
	This software is licensed under the GNU GPLv3.
	See license.txt for details.
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:clipChildren="true" android:fillViewport="true">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
	<TextView
		android:id="@+id/status"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	android:typeface="monospace" android:gravity="right" android:paddingRight="10px"/>
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/post_title"
	/>
	<EditText
		android:id="@+id/title"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:capitalize="sentences"/>
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/post_category"
	/>
	<Spinner
		android:id="@+id/category"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:longClickable="true"
        android:drawSelectorOnTop="true"
		android:prompt="@string/category_prompt"/>
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/post_body"/>
	<EditText
		android:id="@+id/post"
		android:layout_width="fill_parent"
		android:gravity="top" android:capitalize="sentences" android:layout_height="fill_parent" android:layout_weight="1" android:minLines="5"/>
		<!--
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/tags"
	/>
	<EditText
		android:id="@+id/tags"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
		-->
	<TextView
		android:id="@+id/txt_images"	
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/txt_images" android:textStyle="bold" android:textSize="6pt"/>
	<Gallery
		android:id="@+id/gal_images"	
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:minHeight="100px" android:spacing="5px"/>		
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<Button
			android:id="@+id/save_draft"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/save_draft"
			android:layout_weight="1"
		android:textSize="8pt"/>
		<Button
			android:id="@+id/submit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/submit"
		android:textSize="8pt" android:layout_weight="1"/>
	</LinearLayout>
</LinearLayout>
</ScrollView>